# learn-talk-with-AI

./: .gitignore  Dockerfile  README.md  connect_to_single_docker.sh  docker-compose.yml  start_docker.sh  start_in_docker.sh  stop_docker.sh
listen_node/: Dockerfile  docker-compose.yml  start_docker.sh
node_chatTTS/: Dockerfile  start_docker.sh  talk.py
src/launch/: conversation_launch.py
src/listen_node/: CMakeLists.txt  package.xml
src/listen_node/cmake/modules/: FindPortAudio.cmake
src/listen_node/src/: listener_node.cpp
src/speak_node/: CMakeLists.txt  docker-compose.yml  package.xml
src/speak_node/launch/: speak_launch.xml
src/speak_node/src/: speak_node.cpp  speaker_node.cpp
src/speak_node/test/: mel.py
src/think_node/: CMakeLists.txt  entrypoint.sh  package.xml  start_in_docker.sh
src/think_node/include/think_node/: httplib.h  json.hpp  ollama.hpp
src/think_node/src/: thinker_node.cpp
think_node/: Dockerfile  docker-compose.yml  override.conf  start_docker.sh
